# Fesp

./: Makefile  README.md  prerequirements.txt  setup.cfg
debian/: changelog  control  install
fesp/: ._FespReadme.txt  fesp.py
fesp/PIL/: MrcImagePlugin.py
fesp/examples/: s2cdc12fh2s8_0069_0001_fesp.star  s2cdc12fh2s8_0069_0001_pick.star
fesp/scripts/: remove_filament_insides.py  scale_pick_star.py  shrink_mrc_files.csh
fesp_v1_0/: FespReadme.txt  fesp.py
fesp_v1_0/scripts/: convert_star_files.py  scale_pick_star.py  shrink_ptcls_star.py
src/fesp/: FespSettings.txt  fesp.py
src/fesp/examples/: s2cdc12fh2s8_0069_0001.mrc
src/fesp/scripts/: convert_star_files.py  shrink_ptcls_star.py
src/plugin/: MrcImagePlugin.py  __init__.py
wrapper/: Fesp
