[metadata]
name = Fesp 
version = attr: fesp_v1_0.__version__
author = Steven Chou 
author_email = schou@uchc.edu 
description = install -U pip build 
#long_description = file: README.md
#long_description_content_type = text/markdown
#license = TBD 

[options]
#include_package_data = True
package_dir = 
	= . 
packages = 
	fesp_v1_0
install_requires =
	attrdict3
	numpy
	wxPython
	Pillow

[options.entry_points]
console_scripts = 
	Fesp = fesp_v1_0.fesp:main

[build_ext]
#debug = 1

#[options.package_data]
#example = data/schema.json, *.txt
#* = README.md
