[metadata]
name = Fesp 
version = attr: fesp.__version__
author = Steven Chou 
author_email = schou@uchc.edu 
description = install -U pip build 
#long_description = file: README.md
#long_description_content_type = text/markdown
#license = TBD 

[options]
packages = 
	fesp
	fesp.examples
	fesp.scripts
install_requires =
	attrdict3
	numpy
	wxPython
	Pillow

[options.entry_points]
console_scripts = 
	Fesp = fesp.fesp:main

[build_ext]
debug = 1

[options.package_data]
fesp.examples = * 
fesp.scripts = * 
fesp= *txt 
