[metadata]
name = Fesp 
version = attr: fesp.__version__
author = Steven Chou 
author_email = schou@uchc.edu 
description = install -U pip build 
#long_description = file: README.md
#long_description_content_type = text/markdown
#license = TBD 

[options]
package_dir=
	= src
packages = 

	fesp
install_requires =
	attrdict3
	numpy
	wxPython
	Pillow

[options.entry_points]
console_scripts = 
	Fesp = fesp.fesp:main

[build_ext]
debug = 0

#[options.package_data]
